Added install command, fixed an issue with line numbers in release mode

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,3 +12,5 @@ target_include_directories(logicVerifier PUBLIC
 	"${PROJECT_SOURCE_DIR}/Proof"
 	"${PROJECT_SOURCE_DIR}/Statements"
 	)
+
+install(TARGETS logicVerifier DESTINATION "${PROJECT_SOURCE_DIR}/bin")
